--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -145,7 +145,7 @@
 .agreement-hidden {
   width: 16px;
   height: 15px;
-  border: black;
+  border: $title-text-color;
 }
 
 .agreement-label {
@@ -189,7 +189,7 @@ input[name="agreement"] {
   position: absolute;
   width: 16px;
   height: 15px;
-  border: 2px solid black;
+  border: 2px solid #212121;
   border-radius: 2px;
   top: 12px;
   left: 1px;
