--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -34,23 +34,31 @@
     border-radius: 4px;
     width: 170px;
     height: 90px;
-    fill: #afb1b8;
     > svg {
       fill: #afb1b8;
-      // fill: currentColor;
     }
   }
 }
 
 .clients-page__icon {
-  transition: 250ms col cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    border-color: $accent-color;
+  &:hover {
+    border: 1px solid #2196f3;
     fill: $accent-color;
-    & > svg {
-      fill: $accent-color;
-      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  & > svg:hover {
+    fill: $accent-color;
+    transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+.clients-page__icon {
+  &:focus {
+    border: 1px solid #2196f3;
+    fill: $accent-color;
+    transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  & > svg:focus {
+    fill: $accent-color;
+    transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
