--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -44,29 +44,16 @@
   }
 }
 
-.header-nav__item {
-  & .link {
-    color: $title-text-color;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    &.current {
-      color: $accent-color;
-      position: relative;
-    }
-    &.current::after {
-      position: absolute;
-      bottom: 0;
-      content: "";
-      display: flex;
-      top: 44px;
-      width: 100%;
-      height: 4px;
-      background-color: $accent-color;
-      border-radius: 2px;
-    }
+.header-nav__item .link {
+  color: $title-text-color;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  &.current {
+    color: $accent-color;
+    position: relative;
   }
   &:hover,
   &:focus {
@@ -75,17 +62,6 @@
   }
 }
 
-// .link.current::after {
-//   position: absolute;
-//   bottom: 0;
-//   content: "";
-//   display: flex;
-//   top: 44px;
-//   width: 100%;
-//   height: 4px;
-//   background-color: $accent-color;
-//   border-radius: 2px;
-// }
 .info {
   display: flex;
   align-items: center;
