--- a/.vscode/sass/until/_variables.scss
+++ b/.vscode/sass/until/_variables.scss
@@ -59,17 +59,17 @@ a:focus {
   margin-right: auto;
 }
 
-.link.current::after {
-  position: absolute;
-  bottom: 0;
-  content: "";
-  display: flex;
-  top: 44px;
-  width: 100%;
-  height: 4px;
-  background-color: $accent-color;
-  border-radius: 2px;
-}
+// .link.current::after {
+//   position: absolute;
+//   bottom: 0;
+//   content: "";
+//   display: flex;
+//   top: 44px;
+//   width: 100%;
+//   height: 4px;
+//   background-color: $accent-color;
+//   border-radius: 2px;
+// }
 
 a {
   text-decoration: none;
