--- a/css/main.css
+++ b/css/main.css
@@ -53,26 +53,20 @@ a:focus {
   margin-right: auto;
 }
 
-.link.current::after {
-  position: absolute;
-  bottom: 0;
-  content: "";
-  display: flex;
-  top: 44px;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
-}
-
 a {
   text-decoration: none;
 }
 
 .header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header {
@@ -80,9 +74,15 @@ a {
 }
 
 .header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: inherit;
 }
 
@@ -105,10 +105,19 @@ a {
 }
 
 .header-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -131,14 +140,33 @@ a {
   position: relative;
 }
 
-.header-nav__item .link:hover, .header-nav__item .link:focus {
+.header-nav__item .link.current::after {
+  position: absolute;
+  bottom: 0;
+  content: "";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: 44px;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
+}
+
+.header-nav__item:hover, .header-nav__item:focus {
   color: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: 305px;
 }
 
@@ -147,9 +175,15 @@ a {
 }
 
 .mail {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #757575;
   font-weight: 500;
   font-size: 14px;
@@ -163,25 +197,35 @@ a {
 .mail svg {
   margin-right: 10px;
   display: inline-block;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-size: contain;
 }
 
 .mail:hover, .mail:focus {
   color: #2196f3;
   fill: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail:hover svg:hover, .mail:focus svg:hover {
   fill: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #757575;
   font-weight: 500;
   font-size: 14px;
@@ -195,29 +239,38 @@ a {
 .phone svg {
   margin-right: 10px;
   display: inline-block;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-size: contain;
 }
 
 .phone:hover, .phone:focus {
   color: #2196f3;
   fill: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .phone:hover svg:hover, .phone:focus svg:hover {
   fill: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .decision {
   height: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-align: center;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 200px;
   padding-bottom: 200px;
   margin: 0px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/people.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/people.jpg);
 }
 
@@ -241,6 +294,7 @@ a {
   font-family: Roboto, sans-serif;
   background-color: var #ffffff;
   cursor: pointer;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -250,8 +304,12 @@ a {
 }
 
 .advantages__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .advantages__list__item::before {
@@ -316,6 +374,8 @@ a {
 }
 
 .activ__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -334,9 +394,15 @@ a {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: absolute;
   content: "";
   width: 370px;
@@ -346,12 +412,15 @@ a {
 }
 
 .team__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .team__prof {
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -404,9 +473,15 @@ a {
 }
 
 .team-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 50%;
   margin-right: 32px;
   margin-left: 32px;
@@ -419,9 +494,15 @@ a {
 }
 
 .team-social__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -435,12 +516,14 @@ a {
 
 .team-social__link:hover, .team-social__link:focus {
   background-color: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social__link > svg:hover,
 .team-social__link > svg:focus {
   fill: #ffffff;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -459,16 +542,28 @@ a {
 }
 
 .clients__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-bottom: 94px;
 }
 
 .clients-page__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .clients-page__link:not(:last-child) {
@@ -476,39 +571,40 @@ a {
 }
 
 .clients-page__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   width: 170px;
   height: 90px;
+  fill: #afb1b8;
 }
 
 .clients-page__icon > svg {
   fill: #afb1b8;
 }
 
-.clients-page__icon:hover {
-  border: 1px solid #2196f3;
-  fill: #2196f3;
-  transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
+.clients-page__icon {
+  -webkit-transition: 250ms col cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms col cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-page__icon > svg:hover {
+.clients-page__icon:hover, .clients-page__icon:focus {
+  border-color: #2196f3;
   fill: #2196f3;
-  transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-page__icon:focus {
-  border: 1px solid #2196f3;
+.clients-page__icon:hover > svg, .clients-page__icon:focus > svg {
   fill: #2196f3;
-  transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-page__icon > svg:focus {
-  fill: #2196f3;
-  transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-footer {
@@ -557,15 +653,22 @@ a {
 
 .contacts-nav .link-footer:hover, .contacts-nav .link-footer:focus {
   color: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .footer.list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -624,7 +727,8 @@ a {
   color: rgba(255, 255, 255, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: #2f303a;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding: 15px 0px 15px 16px;
 }
@@ -638,7 +742,8 @@ a {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   outline: none;
@@ -658,16 +763,25 @@ a {
 }
 
 .project-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-top: 100px;
   padding-bottom: 94px;
 }
 
 .navigation.list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 50px;
 }
 
@@ -676,9 +790,14 @@ a {
 }
 
 .project.list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .project.list li:nth-child(3n) {
@@ -697,7 +816,8 @@ a {
 }
 
 .project-info:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-blok {
@@ -745,6 +865,7 @@ a {
 
 .project-modal:hover .project-modal-text {
   top: 0;
+  -webkit-transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -765,6 +886,7 @@ a {
 .button.primary:focus, .button.primary:hover {
   color: #f5f4fa;
   background-color: #2196f3;
+  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -785,8 +907,10 @@ a {
   background-color: #ffffff;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 
@@ -796,9 +920,15 @@ a {
   background-color: #ffffff;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: pointer;
   margin-left: auto;
   margin-top: 8px;
@@ -856,18 +986,21 @@ a {
   outline: none;
   padding-left: 42px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .form-style:focus, .form-style:hover {
   border: 1px solid #2196f3;
   border-radius: 4px;
+  -webkit-transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-style:focus + svg,
 .form-style:hover + svg {
   fill: #2196f3;
+  -webkit-transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -897,12 +1030,17 @@ a {
 .comment:focus, .comment:hover {
   border: 1px solid #2196f3;
   border-radius: 4px;
+  -webkit-transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .agreement {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 14px;
   line-height: 171%;
   letter-spacing: 0.03em;
@@ -970,6 +1108,7 @@ input[name="agreement"] {
 
 .agreement-label:focus + .agreement-label:before {
   border-color: #2196f3;
+  -webkit-transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms top cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -987,10 +1126,12 @@ input[name="agreement"] {
   margin-bottom: 40px;
   cursor: pointer;
   border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 /*# sourceMappingURL=main.css.map */
