--- a/css/main.css
+++ b/css/main.css
@@ -118,8 +118,6 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .header-nav__list li:not(:last-child) {
@@ -133,11 +131,15 @@ a {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-nav__item .link.current {
   color: #2196f3;
   position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-nav__item .link.current::after {
@@ -147,7 +149,6 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  top: 44px;
   width: 100%;
   height: 4px;
   background-color: #2196f3;
@@ -516,15 +517,14 @@ a {
 
 .team-social__link:hover, .team-social__link:focus {
   background-color: #2196f3;
-  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social__link > svg:hover,
-.team-social__link > svg:focus {
+.team-social__link:hover > svg, .team-social__link:focus > svg {
   fill: #ffffff;
-  -webkit-transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients {
