--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -36,8 +36,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    // padding-top: 32px;
+    // padding-bottom: 32px;
     li:not(:last-child) {
       margin-right: 50px;
     }
@@ -52,16 +52,20 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    padding-top: 32px;
+    padding-bottom: 32px;
     &.current {
       color: $accent-color;
       position: relative;
+      padding-top: 32px;
+      padding-bottom: 32px;
     }
     &.current::after {
       position: absolute;
       bottom: 0;
       content: "";
       display: flex;
-      top: 44px;
+      // top: 44px;
       width: 100%;
       height: 4px;
       background-color: $accent-color;
@@ -75,17 +79,6 @@
   }
 }
 
-// .link.current::after {
-//   position: absolute;
-//   bottom: 0;
-//   content: "";
-//   display: flex;
-//   top: 44px;
-//   width: 100%;
-//   height: 4px;
-//   background-color: $accent-color;
-//   border-radius: 2px;
-// }
 .info {
   display: flex;
   align-items: center;
